Tons of updates, refactor everything